# InkChess

./: CMakeLists.txt  README.md
include/: Board.h  Move.h  Piece.h  VectorBoard.h  game.h  gui.h  utility.h
src/: VectorBoard.cpp  game.cpp  gui.cpp  main.cpp
